# erzlang-open

./: CHANGELOG.md  README.md  compact.py  pyproject.toml  transform.py
cli/: main.py
docs/: acceptance-metrics.md  autofix-policy.md  calibration-v0.md  ir-contract-v0.1.md  migrations.md  pack-unpack.md  program-pack-dedup-cluster.md  quality-gates.md  review-sprint1.md  runtime-determinism.md  scope-v0.md  template-scan.md  workloop-queue.md
examples/: sample.erz  sprint3_mixed.erz  sprint3_policy.erz
ir/: models.py  refs.py
runtime/: calibration.py  errors.py  eval.py
schema/: ir.v0.1.schema.json
scripts/: check-full.sh  check-unit.sh  check.sh  export_eval_handoff.py  refresh_action_plan_handoff.py  refresh_contract_fixtures.py  refresh_eval_example_fixtures.py  refresh_program_pack_replay_contracts.py  refresh_threshold_handoff.py  release_snapshot.py  validate_fewshot.py
spec/: grammar-card.md
tests/: test_action_plan_handoff_snapshots.py  test_calibration.py  test_cli.py  test_cli_cross_path_ci_examples.py  test_cli_cross_path_examples.py  test_cli_cross_path_lists_examples.py  test_cli_cross_path_regex_examples.py  test_cli_cross_path_string_examples.py  test_cli_eval_sidecar_examples.py  test_cli_event_type_ci_examples.py  test_cli_event_type_path_examples.py  test_cli_event_type_pattern_examples.py  test_cli_event_type_set_examples.py  test_cli_event_type_string_examples.py  test_cli_length_path_examples.py  test_cli_membership_ci_examples.py  test_cli_object_key_examples.py  test_cli_object_key_set_examples.py  test_cli_priority_examples.py  (+19 more)
(+205 files in other folders)
